2011-01-25 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCralloc.hpp,
	  src/z80/ralloc2.cc:
	  Improved handling of A and HL.

2011-01-25 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCglobl.h,
	  src/SDCCralloc.hpp,
	  std/SDCCmain.c,
	  src/z80/z80.h,
	  src/z80/main.c:
	  Modified fix for MSVC 2010 warnings, changed handling of --max-allocs-per-node option.

2011-01-24 Borut Razem <borut.razem AT gmail.com>

	* src/SDCCralloc.hpp, src/z80/main.c, src/z80/ralloc2.cc,
	  src/z80/z80.h, src/z80/z80.vcxproj: fixed msvc 2010 warnings

2011-01-24 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc2.cc,
	  src/z80/gen.c:
	  Improved handling of HL in the new allocator.

2011-01-24 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/ralloc2.cc:
	  Fixed bug in handling of register A.

2011-01-24 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCralloc.hpp,
	  src/z80/ralloc2.cc,
	  src/z80/z80.h,
	  src/z80/main.c,
	  src/z80/gen.c:
	  Improved handling of A in the new register allocator and made it the default.

2011-01-23 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/z80.h,
	  src/z80/main.c,
	  src/z80/ralloc.c:
	  Added option to handle hl, but not a (or iy) by new allocator.

2011-01-23 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/z80.h,
	  src/SDCCtree_dec.hpp,
	  src/z80/ralloc.c,
	  src/z80/ralloc2.cc:
	  Feature enable macro cleanup.

2011-01-23 Borut Razem <borut.razem AT gmail.com>

	* sdcc.sln, */*.vcxproj: MSVC 2010 project files cleaning
	* */*.vcxproj.filters: added to svn
	* debugger/mcs51/simi.c:
	  fixed warning C4273: '_environ' : inconsistent dll linkage
	* Merged from trunk

2011-01-23 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCtree_dec.hpp,
	  src/SDCCralloc.hpp,
	  src/z80/ralloc2.cc:
	  Re-rooting of the tree-decomposition.

2011-01-23 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCtree_dec.hpp,
	  src/SDCCralloc.hpp,
	  src/z80/ralloc2.cc: